chore: Change const func main & adding Set Object

--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
     "functions": 98,
     "branches": 90
   },
+  "husky": {
+    "hooks": {
+        "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "preferGlobal": true,
   "bin": {
     "psp": "./bin/index.js"
