--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "@slimio/manifest": "github:slimio/manifest",
     "inquirer": "^6.2.2",
-    "kleur": "^3.0.2"
+    "kleur": "^3.0.2",
+    "node-emoji": "^1.10.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.5.2",
