--- a/test/.npmignore
+++ b/test/.npmignore
@@ -4,13 +4,14 @@ coverage/
 .nyc_output/
 .circleci/
 docs/
+jsdoc/
 jsdoc.json
 .editorconfig
 .eslintrc
 .gitignore
 tsconfig.json
 commitlint.config.js
-.env
 .travis.yml
 CONTRIBUTING.md
 CHANGELOG.md
+.env
