--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@slimio/manifest": "github:slimio/manifest",
     "inquirer": "^6.2.2",
     "kleur": "^3.0.2",
-    "node-emoji": "^1.10.0"
+    "node-emoji": "^1.10.0",
+    "nyc": "^13.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.5.2",
@@ -27,12 +28,11 @@
     "@slimio/eslint-config": "^2.0.3",
     "@types/node": "^11.11.6",
     "ava": "^1.4.0",
+    "dotenv": "^7.0.0",
     "eslint": "^5.15.3",
     "husky": "^1.3.1",
     "jsdoc": "^3.5.5",
-    "pkg-ok": "^2.3.1",
-    "nyc": "^13.3.0",
-    "dotenv": "^7.0.0"
+    "pkg-ok": "^2.3.1"
   },
   "engines": {
     "node": ">=10"
