--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   "dependencies": {
     "@slimio/manifest": "github:slimio/manifest",
     "kleur": "^3.0.2",
-    "node-emoji": "^1.10.0",
-    "nyc": "^13.3.0"
+    "node-emoji": "^1.10.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^7.5.2",
@@ -31,6 +30,7 @@
     "eslint": "^5.15.3",
     "husky": "^1.3.1",
     "jsdoc": "^3.5.5",
+    "nyc": "^13.3.0",
     "pkg-ok": "^2.3.1"
   },
   "engines": {
