--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "@slimio/manifest": "^0.2.1",
+    "file-ignore-parser": "^1.0.0",
     "kleur": "^3.0.2",
     "node-emoji": "^1.10.0"
   },
