--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@slimio/arg-parser": "^0.3.1",
     "@slimio/manifest": "^0.3.0",
     "cherow": "^1.6.8-dev.20190503",
+    "estree-walker": "^0.6.0",
     "file-ignore-parser": "^1.0.0",
     "file-normalize": "^1.1.2",
     "js-yaml": "^3.13.1",
     "kleur": "^3.0.2",
+    "make-promises-safe": "^5.0.0",
     "node-emoji": "^1.10.0"
   },
   "devDependencies": {
