--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "@slimio/arg-parser": "^0.3.1",
     "@slimio/manifest": "^0.4.0",
-    "cherow": "^1.6.8-dev.20190503",
+    "cherow": "^1.6.9",
     "estree-walker": "^0.6.0",
     "file-ignore-parser": "^1.0.0",
     "file-normalize": "^1.1.2",
