test: add initial test

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   },
   "husky": {
     "hooks": {
+        "pre-push": "npm test",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
