--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,3 @@
 {
-    "extends": "@slimio/eslint-config",
-    "rules": {
-        "max-lines-per-function": "off",
-        "max-depth": "off",
-        "no-loop-func": "off"
-    }
+    "extends": "@slimio/eslint-config"
 }
