--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@slimio/eslint-config": "^2.0.4",
     "@types/node": "^12.0.0",
     "ava": "^1.4.0",
+    "cross-env": "^5.2.0",
     "dotenv": "^8.0.0",
     "eslint": "^5.15.3",
     "husky": "^2.3.0",
@@ -53,7 +54,7 @@
   },
   "husky": {
     "hooks": {
-        "pre-push": "npm test",
+      "pre-push": "cross-env eslint src/*.js bin/index.js && npm test",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
