--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,6 @@
 {
-    "extends": "@slimio/eslint-config"
+    "extends": "@slimio/eslint-config",
+    "rules": {
+        "no-invalid-this": "off"
+    }
 }
