--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
     "extends": "@slimio/eslint-config",
     "rules": {
-        "no-invalid-this": "off"
+        "no-invalid-this": "off",
+        "no-extra-parens": "off"
     }
 }
