--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "bin/index.js"
   ],
   "dependencies": {
-    "@slimio/arg-parser": "^0.3.2",
     "@slimio/manifest": "^0.7.1",
     "estree-walker": "^0.8.1",
     "file-ignore-parser": "^1.0.0",
@@ -39,7 +38,8 @@
     "make-promises-safe": "^5.0.0",
     "marked": "^0.7.0",
     "meriyah": "^1.7.0",
-    "node-emoji": "^1.10.0"
+    "node-emoji": "^1.10.0",
+    "sade": "^1.6.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^8.1.0",
