--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@commitlint/config-conventional": "^8.2.0",
     "@escommunity/minami": "^1.0.0",
     "@slimio/eslint-config": "^4.0.0-next.3",
+    "@types/node": "^12.12.7",
     "ava": "^2.4.0",
     "cross-env": "^6.0.3",
     "dotenv": "^8.2.0",
@@ -56,7 +57,7 @@
     "pkg-ok": "^2.3.1"
   },
   "engines": {
-    "node": ">=10"
+    "node": ">=12"
   },
   "nyc": {
     "check-coverage": true,
