--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
   "files": [
     "index.d.ts",
     "index.js",
-    "src/**",
-    "template/**",
+    "src",
+    "template",
     "bin/index.js"
   ],
   "dependencies": {
@@ -33,6 +33,7 @@
     "estree-walker": "^0.9.0",
     "file-ignore-parser": "^1.0.0",
     "file-normalize": "^1.1.2",
+    "globby": "^10.0.1",
     "js-yaml": "^3.13.1",
     "kleur": "^3.0.2",
     "make-promises-safe": "^5.1.0",
