chore: create proper gyp.js and finish package msg

--- a/package.json
+++ b/package.json
@@ -69,6 +69,14 @@
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
+  "nyc": {
+    "check-coverage": true,
+    "per-file": false,
+    "lines": 98,
+    "statements": 98,
+    "functions": 98,
+    "branches": 90
+  },
   "bin": {
     "psp": "./bin/index.js"
   },
